# king-cro

./: .env.example  .gitignore  CLAUDE.md  COSTS.md  GUARDRAILS.md  README.md  SETUP.md  VERSIONING.md  pyproject.toml
.github/workflows/: implement-experiment.yml  weekly-scan.yml
dev-agent/: CLAUDE.md  handoff-template.md
knowledge/: brand.md  experiments.md  history.md  hypotheses.md  insights.md  playbook.md
reports/pdp/: mock-report.md
scripts/: analyse_theme.py  fetch_analytics.py  fetch_shopify.py  log_result.py  notify.py  power.py  run_agent.py  score.py  utils.py
